--- a/DockerFile
+++ b/DockerFile
@@ -1,6 +1,17 @@
-FROM python:3.11.5-slim
-WORKDIR /code 
-COPY requirements.txt . 
-RUN pip install -r requirements.txt
-COPY src/ .
-CMD ["python", "./main.py"]
+# Use an official Python runtime as the base image
+FROM python:3.11-slim
+
+# Set the working directory in the container
+WORKDIR /app
+
+# Copy requirements first (for caching)
+COPY requirements.txt .
+
+# Install dependencies
+RUN pip install --no-cache-dir -r requirements.txt
+
+# Copy the rest of the project
+COPY . .
+
+# Command to run the application
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "80"]
