--- a/requirements.txt
+++ b/requirements.txt
@@ -33,3 +33,43 @@ urllib3==2.4.0
 uvicorn==0.34.2
 watchfiles==1.0.5
 websockets==15.0.1
+annotated-types==0.7.0
+anyio==4.9.0
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.8
+colorama==0.4.6
+dotenv==0.9.9
+fastapi==0.115.12
+filelock==3.18.0
+fsspec==2025.3.2
+h11==0.14.0
+httpcore==1.0.8
+httptools==0.6.4
+httpx==0.28.1
+huggingface-hub==0.30.2
+idna==3.10
+Jinja2==3.1.6
+MarkupSafe==3.0.2
+numpy==2.2.5
+packaging==25.0
+pydantic==2.11.3
+pydantic_core==2.33.1
+pythainlp==5.1.1
+python-dotenv==1.1.0
+PyYAML==6.0.2
+regex==2024.11.6
+requests==2.32.3
+safetensors==0.5.3
+sniffio==1.3.1
+starlette==0.46.2
+tokenizers==0.21.1
+tqdm==4.67.1
+transformers==4.51.3
+typing-inspection==0.4.0
+typing_extensions==4.13.2
+tzdata==2025.2
+urllib3==2.4.0
+uvicorn==0.34.2
+watchfiles==1.0.5
+websockets==15.0.1
